--- a/src/Pages/MainPage/MainPage.css
+++ b/src/Pages/MainPage/MainPage.css
@@ -63,6 +63,8 @@ main {
 
 .carousel-caption p {
     font-size: 1.25rem;
+    font-weight: bold;
+    color: white;
 }
 
 .carousel-caption button {
@@ -79,3 +81,53 @@ section h3 {
     font-weight: bold;
     font-size: 1rem;
 }
+/*Special categories*/
+
+.ratio{
+    aspect-ratio: 3/4;
+}
+.button-style {
+    position: relative;
+    display: block;
+    width: 100%;
+    border: 2px solid #ffffff; /* Kolor obramowania */
+    border-radius: 10px; /* Zaokrąglenie narożników */
+    overflow: hidden;
+    text-align: center;
+    transition: transform 0.3s, box-shadow 0.3s; /* Efekt animacji */
+    cursor: pointer;
+  }
+  
+  .button-style:hover {
+    transform: scale(1.05); /* Powiększenie na hover */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Cień na hover */
+  }
+  
+  .sc-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Dopasowanie obrazu do kontenera */
+    transition: filter 0.3s;
+  }
+  
+  .ratio .button-text {
+    position: absolute;
+    top:80%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: rgb(58, 58, 58);
+    background-color: rgba(255, 255, 255, 0.784); 
+    border-radius: 2px;
+    border-width: 0px;
+    font-size: 1rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: background-color 0.3s;
+    width: 70%;
+    height: 15%;
+  }
+  
+  .button-style:hover .button-text {
+    background-color: rgba(253, 253, 253, 0.915); /* Intensywniejszy kolor na hover */
+  }
+  
